# agent-x

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  db.py  events.py  main.py
backend/app/api/: agents.py  meta.py  runs.py  schemas.py  workflows.py  ws.py
backend/app/channels/: __init__.py  base.py  telegram.py
backend/app/models/: __init__.py  agent.py  message.py  run.py  workflow.py
backend/app/runtime/: __init__.py  engine.py  guardrails.py  memory.py  state.py  tools.py
backend/app/seeds/: templates.py
backend/tests/: conftest.py  test_agents.py  test_telegram.py  test_workflow.py
docs/: ARCHITECTURE.md  WALKTHROUGH.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/agents/: page.tsx
frontend/app/monitor/: page.tsx
frontend/app/runs/: page.tsx
frontend/app/runs/[id]/: page.tsx
frontend/app/workflows/: page.tsx
frontend/app/workflows/[id]/: page.tsx
frontend/lib/: api.ts  ws.ts
