[project]
name = "agentx-backend"
version = "0.1.0"
description = "AgentX AI Agent Orchestration Platform — backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "sqlalchemy>=2.0",
  "aiosqlite>=0.20",
  "alembic>=1.13",
  "langgraph>=0.2.30",
  "langchain-core>=0.3",
  "langchain-openai>=0.2",
  "httpx>=0.27",
  "python-telegram-bot>=21.5",
  "websockets>=12.0",
  "tenacity>=8.5",
  "python-dotenv>=1.0",
  "croniter>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.23", "httpx>=0.27", "respx>=0.21"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
